RTCEth/Import Declarations/Visual C++/RTC4ethimpl.h


extern "C" unsigned int __stdcall get_driver_status();

extern "C" unsigned int __stdcall get_net_dll_version();

extern "C" unsigned int __stdcall acquire_rtc(unsigned int card_no);

extern "C" unsigned int __stdcall release_rtc(unsigned int card_no);

extern "C" void __stdcall select_rtc(unsigned short card_no);

extern "C" unsigned int __stdcall assign_rtc(unsigned short search_no, unsigned short card_no);

extern "C" unsigned int __stdcall assign_rtc_by_ip(unsigned int ip, unsigned short card_no);

extern "C" void __stdcall remove_rtc(unsigned short card_no);

extern "C" unsigned int __stdcall convert_string_to_ip(const char * ip);

extern "C" void __stdcall convert_ip_to_string(unsigned int ip, char * cpIp);

extern "C" void __stdcall convert_mac_to_string(long long mac, char * cpMac);

extern "C" unsigned int __stdcall rtc_search_cards(unsigned short* cards, unsigned int ip, unsigned int netmask);

extern "C" long long __stdcall get_mac_address(unsigned short cardNo);

extern "C" unsigned int __stdcall get_ip_address(unsigned short cardNo);

extern "C" unsigned int __stdcall get_serial(unsigned short cardNo);

extern "C" unsigned short __stdcall get_connection_status(unsigned short cardNo);

extern "C" unsigned int __stdcall get_master_ip_address(unsigned short cardNo);

extern "C" unsigned int __stdcall get_master_id(unsigned short cardNo, char * id);

extern "C" unsigned int __stdcall set_static_ip(unsigned int ip, unsigned int netmask, unsigned int gateway);

extern "C" unsigned int __stdcall get_static_ip(unsigned int* ip, unsigned int* netmask, unsigned int* gateway);

extern "C" unsigned int __stdcall get_mcu_fw_version(unsigned short cardNo);

extern "C" unsigned int __stdcall get_nic_ip_count(unsigned short* count);

extern "C" void __stdcall get_nic_ip(unsigned short count, unsigned int* ip, unsigned int* nm);

extern "C" void __stdcall n_get_waveform(unsigned short n, unsigned short channel, unsigned short istop, signed short * MemPtr);

extern "C" void __stdcall get_waveform(unsigned short channel, unsigned short istop, signed short * MemPtr);

extern "C" void __stdcall n_measurement_status(unsigned short n, unsigned short* busy, unsigned short* position);

extern "C" void __stdcall measurement_status(unsigned short* busy, unsigned short* position);

extern "C" void __stdcall n_set_trigger(unsigned short n, unsigned short sampleperiod, unsigned short channel1, unsigned short channel2);

extern "C" void __stdcall set_trigger(unsigned short sampleperiod, unsigned short signal1, unsigned short signal2);

extern "C" short __stdcall n_get_value(unsigned short n, unsigned short signal);

extern "C" short __stdcall get_value(unsigned short signal);

extern "C" void __stdcall n_set_io_bit(unsigned short n, unsigned short mask1);

extern "C" void __stdcall set_io_bit(unsigned short mask1);

extern "C" void __stdcall n_clear_io_bit(unsigned short n, unsigned short mask0);

extern "C" void __stdcall clear_io_bit(unsigned short mask0);

extern "C" void __stdcall n_move_to(unsigned short n, unsigned short position);

extern "C" void __stdcall move_to(unsigned short position);

extern "C" void __stdcall n_control_command(unsigned short n, unsigned short head, unsigned short axis, unsigned short data);

extern "C" void __stdcall control_command(unsigned short head, unsigned short axis, unsigned short data);

extern "C" void __stdcall n_arc_rel(unsigned short n, short dx, short dy, double angle);

extern "C" void __stdcall arc_rel(short dx, short dy, double angle);

extern "C" void __stdcall n_arc_abs(unsigned short n, short x, short y, double angle);

extern "C" void __stdcall arc_abs(short x, short y, double angle);

extern "C" void __stdcall drilling(short PulseWidth, short RelEncoderDelay);

extern "C" void __stdcall regulation();

extern "C" void __stdcall flyline(short EncoderDelay);

extern "C" void __stdcall set_duty_cycle_table(unsigned short index, unsigned short dutycycle);

extern "C" short __stdcall n_load_varpolydelay(unsigned short n, const char * stbFileName, unsigned short TableNo);

extern "C" short __stdcall load_varpolydelay(const char * stbFileName, unsigned short TableNo);

extern "C" short __stdcall n_load_program_file(unsigned short n, const char * name);

extern "C" short __stdcall load_program_file(const char * name);

extern "C" short __stdcall n_load_correction_file(unsigned short n, const char * FileName, short CorTable, double Kx, double Ky, double Phi, double Xoffset, double Yoffset);

extern "C" short __stdcall load_correction_file(const char * FileName, short CorTable, double Kx, double Ky, double Phi, double Xoffset, double Yoffset);

extern "C" short __stdcall n_load_z_table(unsigned short n, double A, double B, double C);

extern "C" short __stdcall load_z_table(double A, double B, double C);

extern "C" void __stdcall n_list_nop(unsigned short n);

extern "C" void __stdcall list_nop();

extern "C" void __stdcall n_set_end_of_list(unsigned short n);

extern "C" void __stdcall set_end_of_list();

extern "C" void __stdcall n_jump_abs_3d(unsigned short n, short x, short y, short z);

extern "C" void __stdcall jump_abs_3d(short x, short y, short z);

extern "C" void __stdcall n_jump_abs(unsigned short n, short x, short y);

extern "C" void __stdcall jump_abs(short x, short y);

extern "C" void __stdcall n_mark_abs_3d(unsigned short n, short x, short y, short z);

extern "C" void __stdcall mark_abs_3d(short x, short y, short z);

extern "C" void __stdcall n_mark_abs(unsigned short n, short x, short y);

extern "C" void __stdcall mark_abs(short x, short y);

extern "C" void __stdcall n_jump_rel_3d(unsigned short n, short dx, short dy, short dz);

extern "C" void __stdcall jump_rel_3d(short dx, short dy, short dz);

extern "C" void __stdcall n_jump_rel(unsigned short n, short dx, short dy);

extern "C" void __stdcall jump_rel(short dx, short dy);

extern "C" void __stdcall n_mark_rel_3d(unsigned short n, short dx, short dy, short dz);

extern "C" void __stdcall mark_rel_3d(short dx, short dy, short dz);

extern "C" void __stdcall n_mark_rel(unsigned short n, short dx, short dy);

extern "C" void __stdcall mark_rel(short dx, short dy);

extern "C" void __stdcall n_write_8bit_port_list(unsigned short n, unsigned short value);

extern "C" void __stdcall write_8bit_port_list(unsigned short value);

extern "C" void __stdcall n_write_da_1_list(unsigned short n, unsigned short value);

extern "C" void __stdcall write_da_1_list(unsigned short value);

extern "C" void __stdcall n_write_da_2_list(unsigned short n, unsigned short value);

extern "C" void __stdcall write_da_2_list(unsigned short value);

extern "C" void __stdcall n_set_matrix_list(unsigned short n, unsigned short i, unsigned short j, double Mij);

extern "C" void __stdcall set_matrix_list(unsigned short i, unsigned short j, double Mij);

extern "C" void __stdcall n_set_offset_list(unsigned short n, short Xoffset, short Yoffset);

extern "C" void __stdcall set_offset_list(short Xoffset, short Yoffset);

extern "C" void __stdcall n_set_defocus_list(unsigned short n, short value);

extern "C" void __stdcall set_defocus_list(short value);

extern "C" void __stdcall n_set_defocus(unsigned short n, short value);

extern "C" void __stdcall set_defocus(short value);

extern "C" void __stdcall n_set_softstart_mode(unsigned short n, unsigned short mode, unsigned short number, unsigned short restartdelay);

extern "C" void __stdcall set_softstart_mode(unsigned short mode, unsigned short number, unsigned short resetdelay);

extern "C" void __stdcall n_set_softstart_level(unsigned short n, unsigned short index, unsigned short level);

extern "C" void __stdcall set_softstart_level(unsigned short index, unsigned short level);

extern "C" void __stdcall n_set_control_mode_list(unsigned short n, unsigned short mode);

extern "C" void __stdcall set_control_mode_list(unsigned short mode);

extern "C" void __stdcall n_set_control_mode(unsigned short n, unsigned short mode);

extern "C" void __stdcall set_control_mode(unsigned short mode);

extern "C" void __stdcall n_long_delay(unsigned short n, unsigned short value);

extern "C" void __stdcall long_delay(unsigned short value);

extern "C" void __stdcall n_laser_on_list(unsigned short n, unsigned short value);

extern "C" void __stdcall laser_on_list(unsigned short value);

extern "C" void __stdcall n_set_jump_speed(unsigned short n, double speed);

extern "C" void __stdcall set_jump_speed(double speed);

extern "C" void __stdcall n_set_mark_speed(unsigned short n, double speed);

extern "C" void __stdcall set_mark_speed(double speed);

extern "C" void __stdcall n_set_laser_delays(unsigned short n, short ondelay, short offdelay);

extern "C" void __stdcall set_laser_delays(short ondelay, short offdelay);

extern "C" void __stdcall n_set_scanner_delays(unsigned short n, unsigned short jumpdelay, unsigned short markdelay, unsigned short polydelay);