RTCEth/Import Declarations/Visual Basic .NET/RTC4ethImport.vb


Module RTC4eth
    Declare Function get_driver_status Lib "RTC4ethDLL.DLL" () As UInteger
    Declare Function get_net_dll_version Lib "RTC4ethDLL.DLL" () As UInteger
    Declare Function acquire_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As UInteger) As UInteger
    Declare Function release_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As UInteger) As UInteger
    Declare Sub      select_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As UShort)
    Declare Function assign_rtc Lib "RTC4ethDLL.DLL" (ByVal search_no As UShort, ByVal card_no As UShort) As UInteger
    Declare Function assign_rtc_by_ip Lib "RTC4ethDLL.DLL" (ByVal ip As UInteger, ByVal card_no As UShort) As UInteger
    Declare Sub      remove_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As UShort)
    Declare Function convert_string_to_ip Lib "RTC4ethDLL.DLL" (ByVal ip As String) As UInteger
    Declare Sub      convert_ip_to_string Lib "RTC4ethDLL.DLL" (ByVal ip As UInteger, ByVal cpip As IntPtr)
    Declare Sub      convert_mac_to_string Lib "RTC4ethDLL.DLL" (ByVal mac As Long, ByVal cpmac As IntPtr)
    Declare Function rtc_search_cards Lib "RTC4ethDLL.DLL" (ByRef cards As UShort, ByVal ip As UInteger, ByVal netmask As UInteger) As UInteger
    Declare Function get_mac_address Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort) As Long
    Declare Function get_ip_address Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort) As UInteger
    Declare Function get_serial Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort) As UInteger
    Declare Function get_connection_status Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort) As UShort
    Declare Function get_master_ip_address Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort) As UInteger
    Declare Function get_master_id Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort, ByVal id As IntPtr) As UInteger
    Declare Function set_static_ip Lib "RTC4ethDLL.DLL" (ByVal ip As UInteger, ByVal netmask As UInteger, ByVal gateway As UInteger) As UInteger
    Declare Function get_static_ip Lib "RTC4ethDLL.DLL" (ByRef ip As UInteger, ByRef netmask As UInteger, ByRef gateway As UInteger) As UInteger
    Declare Function get_mcu_fw_version Lib "RTC4ethDLL.DLL" (ByVal cardno As UShort) As UInteger
    Declare Function get_nic_ip_count Lib "RTC4ethDLL.DLL" (ByRef count As UShort) As UInteger
    Declare Sub      get_nic_ip Lib "RTC4ethDLL.DLL" (ByVal count As UShort, ByRef ip As UInteger, ByRef nm As UInteger)
    Declare Sub      n_get_waveform Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal channel As UShort, ByVal istop As UShort, <MarshalAs(UnmanagedType.LPArray)> memptr As Short())
    Declare Sub      get_waveform Lib "RTC4ethDLL.DLL" (ByVal channel As UShort, ByVal istop As UShort, <MarshalAs(UnmanagedType.LPArray)> memptr As Short())
    Declare Sub      n_measurement_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByRef busy As UShort, ByRef position As UShort)
    Declare Sub      measurement_status Lib "RTC4ethDLL.DLL" (ByRef busy As UShort, ByRef position As UShort)
    Declare Sub      n_set_trigger Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal sampleperiod As UShort, ByVal channel1 As UShort, ByVal channel2 As UShort)
    Declare Sub      set_trigger Lib "RTC4ethDLL.DLL" (ByVal sampleperiod As UShort, ByVal signal1 As UShort, ByVal signal2 As UShort)
    Declare Function n_get_value Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal signal As UShort) As Short
    Declare Function get_value Lib "RTC4ethDLL.DLL" (ByVal signal As UShort) As Short
    Declare Sub      n_set_io_bit Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mask1 As UShort)
    Declare Sub      set_io_bit Lib "RTC4ethDLL.DLL" (ByVal mask1 As UShort)
    Declare Sub      n_clear_io_bit Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mask0 As UShort)
    Declare Sub      clear_io_bit Lib "RTC4ethDLL.DLL" (ByVal mask0 As UShort)
    Declare Sub      n_move_to Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal position As UShort)
    Declare Sub      move_to Lib "RTC4ethDLL.DLL" (ByVal position As UShort)
    Declare Sub      n_control_command Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal head As UShort, ByVal axis As UShort, ByVal data As UShort)
    Declare Sub      control_command Lib "RTC4ethDLL.DLL" (ByVal head As UShort, ByVal axis As UShort, ByVal data As UShort)
    Declare Sub      n_arc_rel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short, ByVal angle As Double)
    Declare Sub      arc_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short, ByVal angle As Double)
    Declare Sub      n_arc_abs Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal angle As Double)
    Declare Sub      arc_abs Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal angle As Double)
    Declare Sub      drilling Lib "RTC4ethDLL.DLL" (ByVal pulsewidth As Short, ByVal relencoderdelay As Short)
    Declare Sub      regulation Lib "RTC4ethDLL.DLL" ()
    Declare Sub      flyline Lib "RTC4ethDLL.DLL" (ByVal encoderdelay As Short)
    Declare Sub      set_duty_cycle_table Lib "RTC4ethDLL.DLL" (ByVal index As UShort, ByVal dutycycle As UShort)
    Declare Function n_load_varpolydelay Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal stbfilename As String, ByVal tableno As UShort) As Short
    Declare Function load_varpolydelay Lib "RTC4ethDLL.DLL" (ByVal stbfilename As String, ByVal tableno As UShort) As Short
    Declare Function n_load_program_file Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal name As String) As Short
    Declare Function load_program_file Lib "RTC4ethDLL.DLL" (ByVal name As String) As Short
    Declare Function n_load_correction_file Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal filename As String, ByVal cortable As Short, ByVal kx As Double, ByVal ky As Double, ByVal phi As Double, ByVal xoffset As Double, ByVal yoffset As Double) As Short
    Declare Function load_correction_file Lib "RTC4ethDLL.DLL" (ByVal filename As String, ByVal cortable As Short, ByVal kx As Double, ByVal ky As Double, ByVal phi As Double, ByVal xoffset As Double, ByVal yoffset As Double) As Short
    Declare Function n_load_z_table Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal a As Double, ByVal b As Double, ByVal c As Double) As Short
    Declare Function load_z_table Lib "RTC4ethDLL.DLL" (ByVal a As Double, ByVal b As Double, ByVal c As Double) As Short
    Declare Sub      n_list_nop Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      list_nop Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_set_end_of_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      set_end_of_list Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_jump_abs_3d Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal z As Short)
    Declare Sub      jump_abs_3d Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal z As Short)
    Declare Sub      n_jump_abs Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short)
    Declare Sub      jump_abs Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short)
    Declare Sub      n_mark_abs_3d Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal z As Short)
    Declare Sub      mark_abs_3d Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal z As Short)
    Declare Sub      n_mark_abs Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short)
    Declare Sub      mark_abs Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short)
    Declare Sub      n_jump_rel_3d Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short, ByVal dz As Short)
    Declare Sub      jump_rel_3d Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short, ByVal dz As Short)
    Declare Sub      n_jump_rel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short)
    Declare Sub      jump_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short)
    Declare Sub      n_mark_rel_3d Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short, ByVal dz As Short)
    Declare Sub      mark_rel_3d Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short, ByVal dz As Short)
    Declare Sub      n_mark_rel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short)
    Declare Sub      mark_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short)
    Declare Sub      n_write_8bit_port_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_8bit_port_list Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_write_da_1_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_da_1_list Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_write_da_2_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_da_2_list Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_set_matrix_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal i As UShort, ByVal j As UShort, ByVal mij As Double)
    Declare Sub      set_matrix_list Lib "RTC4ethDLL.DLL" (ByVal i As UShort, ByVal j As UShort, ByVal mij As Double)
    Declare Sub      n_set_offset_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal xoffset As Short, ByVal yoffset As Short)
    Declare Sub      set_offset_list Lib "RTC4ethDLL.DLL" (ByVal xoffset As Short, ByVal yoffset As Short)
    Declare Sub      n_set_defocus_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As Short)
    Declare Sub      set_defocus_list Lib "RTC4ethDLL.DLL" (ByVal value As Short)
    Declare Sub      n_set_defocus Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As Short)
    Declare Sub      set_defocus Lib "RTC4ethDLL.DLL" (ByVal value As Short)
    Declare Sub      n_set_softstart_mode Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UShort, ByVal number As UShort, ByVal restartdelay As UShort)
    Declare Sub      set_softstart_mode Lib "RTC4ethDLL.DLL" (ByVal mode As UShort, ByVal number As UShort, ByVal resetdelay As UShort)
    Declare Sub      n_set_softstart_level Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal index As UShort, ByVal level As UShort)
    Declare Sub      set_softstart_level Lib "RTC4ethDLL.DLL" (ByVal index As UShort, ByVal level As UShort)
    Declare Sub      n_set_control_mode_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UShort)
    Declare Sub      set_control_mode_list Lib "RTC4ethDLL.DLL" (ByVal mode As UShort)
    Declare Sub      n_set_control_mode Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mode As UShort)
    Declare Sub      set_control_mode Lib "RTC4ethDLL.DLL" (ByVal mode As UShort)
    Declare Sub      n_long_delay Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      long_delay Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_laser_on_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      laser_on_list Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_set_jump_speed Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal speed As Double)
    Declare Sub      set_jump_speed Lib "RTC4ethDLL.DLL" (ByVal speed As Double)
    Declare Sub      n_set_mark_speed Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal speed As Double)
    Declare Sub      set_mark_speed Lib "RTC4ethDLL.DLL" (ByVal speed As Double)
    Declare Sub      n_set_laser_delays Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal ondelay As Short, ByVal offdelay As Short)
    Declare Sub      set_laser_delays Lib "RTC4ethDLL.DLL" (ByVal ondelay As Short, ByVal offdelay As Short)
    Declare Sub      n_set_scanner_delays Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal jumpdelay As UShort, ByVal markdelay As UShort, ByVal polydelay As UShort)
